--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,6 @@ header{
     top:0;
     z-index: 10;
     height: 50px;
-    position: relative;
 }
 
 
@@ -91,8 +90,7 @@ header{
 
 @media(max-width:450px){
     .main{
-        width: 420px;
-        margin:0 auto;
+        margin: 0 20px;
     }
     .title-name{
         padding-top: 45px;
