--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,6 @@ header{
     height: 50px;
 }
 
-
-
 .container div{
     display: inline-block;
     height: 50px;
@@ -58,6 +56,7 @@ header{
 .main{
     margin-left: 80px;
     position: relative;
+    width: 100%;
 }
 
 .title{
@@ -88,4 +87,5 @@ header{
 
 
 }
+
 
