--- a/responsive.css
+++ b/responsive.css
@@ -2,6 +2,7 @@
     .main{
         margin: 0 20px;
         position: relative;
+        width: 100%;
     }
     .title-name{
         padding-top: 45px;
@@ -22,8 +23,7 @@
     }
     
     .img1{
-        width: 200;
-        height: 120px;
+        width: 70%;
         margin: 0 auto;
     }
 }
