--- a/responsive.css
+++ b/responsive.css
@@ -1,14 +1,5 @@
 @media all and (max-width:450px){
-    .main{
-        margin: 0 20px;
-        position: relative;
-        width: 100%;
-    }
-    .title-name{
-        padding-top: 45px;
-        text-align: center;
-        font-size: 30px;
-    }
+
     .header-center{
         margin-left: 0%;
     }
@@ -21,9 +12,31 @@
         line-height: 50px;
         font-family: Arial Black;
     }
-    
-    .img1{
-        width: 70%;
-        margin: 0 auto;
+
+    .main{
+        width: 100%;
+        margin-top: 60px;
     }
+
+    .top-wrapper{
+        margin: 0 20px;
+    }
+
+    .title-name{
+        padding-top: 45px;
+        text-align: center;
+        font-size: 30px;
+    }
+    .contents-title{
+        padding:30px 0 0 40px ;
+        font-size: 20px;
+    }
+    .contents {
+        font-size: 20px;
+        background-color: rgb(179, 212, 241);
+        height: 260px;
+        width: 270px;
+    }
+    
+
 }
