--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,12 +18,10 @@ header{
     font-weight: 600;
     width: 100%;
     position: fixed;
-    top: 0;
+    top:0;
     z-index: 10;
     height: 50px;
 }
-
-
 
 .container div{
     display: inline-block;
@@ -56,13 +54,13 @@ header{
 }
 
 .main{
+    margin-left: 80px;
+    position: relative;
     width: 100%;
 }
 
-
 .title{
     margin-top: 60px;
-    margin-left: 80px;
 }
 
 .category{
@@ -76,49 +74,18 @@ header{
     font-size: 50px;
 }
 
-.img{
-    position: relative;
+.contents-wrapper{
+    margin-top: 50px;
 }
 
+.img1{
+    width: 500px;
+    height: 300px;
+    position: absolute;
+    top: 300px;
+    left: 600px;
 
-.contents-title{
-    padding:30px 0 0 60px ;
-    font-size: 20px;
+
 }
-
-.contents {
-    font-size: 20px;
-    background-color: rgb(179, 212, 241);
-    height: 240px;
-    width: 300px;
-}
-
-.tHead p{
-    margin-top: 80px;
-    display: inline-block;
-    border-bottom:2px solid black;
-    font-size: 30px;
-    font-weight: 500;
-}
-
-.role{
-    padding-bottom: 20px;
-}
-
-.caution{
-    color:red;
-}
-
-
-
-.conclude p{
-    margin-top: 80px;
-    display: inline-block;
-    border-bottom:2px solid black;
-    font-size: 30px;
-    font-weight: 500;
-}
-
-
 
 
