--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,13 +54,12 @@ header{
 }
 
 .main{
-    margin-left: 80px;
     position: relative;
     width: 100%;
 }
 
-.title{
-    margin-top: 60px;
+.top-wrapper{
+    margin: 60px 0 0 80px;
 }
 
 .category{
@@ -75,7 +74,7 @@ header{
 }
 
 .contents-wrapper{
-    margin-top: 50px;
+    margin: 50px 0 0 80px;
 }
 
 .img1{
