--- a/responsive.css
+++ b/responsive.css
@@ -31,10 +31,6 @@
         border: 1px solid cornflowerblue;
     }
 
-    .ma{
-        margin-top: 280px;
-    }
-
    .contents-wrapper{
         margin-top: 60px;
         margin-left:0;
@@ -45,10 +41,13 @@
     }
 
     .img1{
-        width: 90%;
+        display: block;
+        width: 100%;
         height: auto;
-        position: absolute;
-        top: 330px;
+    }
+
+    .img2{
+       display: none;
         
     }
 }
