--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,11 +87,11 @@ header{
 }
 
 .img2{
-    width: 500px;
-    height: 300px;
+    width: 35%;
+    height: auto;
     position: absolute;
-    top: 300px;
-    left: 600px;
+    top: 350px;
+    left: 50%;
 
 
 }
