--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,24 @@
+/*　タブレット用表示　*/
+@media all and (max-width:1000px){
+
+    .contents-wrapper{
+        margin: 70px 0 0 90px;
+    } 
+
+
+    .img2{
+        width: 35%;
+        height: auto;
+        position: absolute;
+        top: 370px;
+        left: 55%;
+    
+    
+    }
+    
+}
+
+/*　スマホ版表示　*/
 @media all and (max-width:670px){
 
     .header-center{
