--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,13 +73,21 @@ header{
     font-size: 50px;
 }
 
-.bb{
+.aa{
     display: inline-block;
     border-bottom: 1px solid cornflowerblue;
 }
 
+.bb{
+    display: none;
+}
+
 .contents-wrapper{
     margin: 90px 0 0 90px;
+}
+
+.part{
+    margin-top: 30px;
 }
 
 .img1{
