--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,7 @@
 body{
     font-family: "Hiragino Kaku Gothic ProN";
+    position: relative;
+    background-color:rgb(243, 243, 243);
 }
 
 li{
@@ -53,11 +55,6 @@ header{
     margin-right:15px; 
 }
 
-.main{
-    position: relative;
-    width: 100%;
-}
-
 .top-wrapper{
     margin: 60px 0 0 80px;
 }
@@ -73,31 +70,58 @@ header{
     font-size: 50px;
 }
 
+.main{
+    margin-left:10%;;
+    width: 55%;
+    background-color: white;
+    display: inline-block;
+}
+
+.title-wrapper{
+    margin: 30px 40px 0 80px;
+ 
+}
+
+
 .aa{
     display: inline-block;
-    border-bottom: 1px solid cornflowerblue;
+    border: 1px solid cornflowerblue;
+    margin-bottom: 10px;
+}
+
+.img1{
+    padding-top: 10px;
+    width: 55%;
+    height: auto;
+    
+}
+
+
+.ma{
+    margin-top: 30px;
+    display: inline-block;
+    background-color: rgb(255, 183, 183);
 }
 
 .contents-wrapper{
-    margin: 90px 0 0 90px;
+    margin-left: 80px;
+    margin-right: 40px;
 }
 
 .part{
     margin-top: 30px;
 }
 
-.img1{
-    display: none;
-}
-
-.img2{
-    width: 40%;
-    height: auto;
+.rightP{
+    display: inline-block;
+    margin-left: 50px;
+    width: 270px;
+    height: 1000px;
+    background-color: white;
     position: absolute;
-    top: 330px;
-    left: 50%;
-
 
 }
+
+
 
 
