--- a/responsive.css
+++ b/responsive.css
@@ -5,17 +5,6 @@
         margin: 70px 0 0 90px;
     } 
 
-
-    .img2{
-        width: 35%;
-        height: auto;
-        position: absolute;
-        top: 370px;
-        left: 55%;
-    
-    
-    }
-    
 }
 
 /*　スマホ版表示　*/
@@ -67,8 +56,7 @@
         height: auto;
     }
 
-    .img2{
-       display: none;
-        
+    .rightP{
+        display: none;
     }
 }
