--- a/responsive.css
+++ b/responsive.css
@@ -1,11 +1,4 @@
 /*　タブレット用表示　*/
-@media all and (max-width:1050px){
-
-    .contents-wrapper{
-        margin: 70px 0 0 90px;
-    } 
-
-}
 
 /*　スマホ版表示　*/
 @media all and (max-width:670px){
@@ -32,9 +25,15 @@
         text-align: center;
         font-size: 30px;
     }
-    
-    .title-article{
-        margin-top: 55px;
+
+    .main{
+        width: 100%;
+        background-color: white;
+        margin-left: 0%;
+    }
+
+    .title-wrapper{
+        margin: 0 10px;
     }
 
     .aa{
